--- a/src/App.css
+++ b/src/App.css
@@ -13,20 +13,7 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
 
 @keyframes App-logo-spin {
   from {
@@ -35,4 +22,46 @@
   to {
     transform: rotate(360deg);
   }
+}
+.mainhead{
+       display: flex;
+       flex-direction: column;
+       align-items: center;
+       justify-content: center;;
+       font-size: 300%;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: -15%;
+}
+.increment{
+    background-color: green;
+  color: white;
+  font-size: 20px;
+  padding: 10px 60px;
+  border-radius: 5px;
+  margin: 20px 0px;
+  cursor: pointer;
+  top:-40%;
+}
+.decrement
+{
+    background-color: red;
+  color: white;
+  font-size: 20px;
+  padding: 10px 60px;
+  border-radius: 5px;
+  margin: 10px 0px;
+  cursor: pointer;
+  top:7vh;
+}
+.reset{
+   background-color: black;
+  color: white;
+  font-size: 20px;
+  padding: 10px 60px;
+  border-radius: 5px;
+  margin: 20px 20px;
+  cursor: pointer;
+  
 }
